manifests/infra/custom/cnpg-kine-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kine-pg
spec:
  selector:
    cnpg.io/cluster: kine-pg
    role: primary
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
