manifests/infra/custom/cnpg-kine-cluster/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: kine-tcp
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: placeholder-gateway-section
  rules:
    - backendRefs: 
      - group: ''
        kind: Service
        name: kine-pg-rw
        port: 5432
        weight: 1
